# benefit-finder

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: build-windows.yml
docs/: ARCHITECTURE.md  BUILD.md  HOW-TO-OPEN.md  RULE_SCHEMA.md  STATE.md
packaging/: benefit_finder.spec  build_mac.sh  build_windows.bat
src/benefit_finder/: __init__.py  cli.py  core.py  desktop.py  engine.py  fpl.py  models.py  report.py  rules_loader.py  values.py
src/benefit_finder/rules/federal/: aca_subsidy.yaml  aotc.yaml  ctc_actc.yaml  eitc.yaml  lifeline.yaml  lifetime_learning_credit.yaml  nslp.yaml  pell_grant.yaml  savers_credit.yaml  snap.yaml  summer_ebt.yaml  wic.yaml
src/benefit_finder/rules/states/ks/: food_sales_tax_credit.yaml  homestead_refund.yaml  lieap.yaml  medicaid_chip_children.yaml  medicaid_pregnant.yaml
src/benefit_finder/web/: __init__.py  __main__.py  app.py  schemas.py
src/benefit_finder/web/static/: index.html
src/benefit_finder/web/static/css/: styles.css
src/benefit_finder/web/static/js/: api.js  app.js  dashboard.js  dom.js  markdown.js  report.js  state.js  wizard.js
tests/: conftest.py  test_api.py  test_desktop.py  test_engine.py  test_fpl.py  test_hardening.py  test_hardening_round2.py  test_models.py  test_rules_files.py  test_smoke_kansas.py  test_values.py
