[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "benefit-finder"
version = "0.1.0"
description = "Screen a US household against public benefits, assistance programs, and tax credits, and generate an organized report."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
web = ["fastapi>=0.110", "uvicorn[standard]>=0.29"]
package = ["fastapi>=0.110", "uvicorn[standard]>=0.29", "pyinstaller>=6.0"]
dev = ["pytest>=8.0", "httpx>=0.27", "fastapi>=0.110", "uvicorn[standard]>=0.29"]

[project.scripts]
benefit-finder = "benefit_finder.cli:main"
benefit-finder-web = "benefit_finder.web.__main__:main"
benefit-finder-app = "benefit_finder.desktop:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
benefit_finder = ["rules/**/*.yaml", "py.typed"]
"benefit_finder.web" = ["static/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
